umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@pubchem_Conformer3D_COMPOUND_CID_8030.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C4H4S
      atom_count: 9
      bond_count: 9
      property_count: 22
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C4H4S
      atom_count: 9
      bond_count: 9
      property_count: 22
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C4H4S
      atom_count: 9
      bond_count: 9
      extended_atoms: 0
      extended_bonds: 0
      property_count: 22
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C4H4S
      atom_count: 9
      bond_count: 9
      extended_atoms: 0
      extended_bonds: 0
      property_count: 22
      rgroup_count: 0
      sgroup_count: 0
